--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,35 +1,23 @@
-name: ci
+name: 'build'
 
 on:
   push:
-    branches: master
+    branches:
+      - master
+  pull_request:
 
 jobs:
-  main:
+  build:
+    name: 'Build'
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: "Build:checkout"
+        uses: actions/checkout@v2
+      - name: 'Build:dockerimage'
+        uses: docker/build-push-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: taperix/taperix-base-php:latest
-          build-args: |
-            arg1=value1
-            arg2=value2
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+          registry: ghcr.io
+          username: "larswiegers"
+          password: ${{ secrets.PAT }}
+          repository: taperix/taperix-base-php
+          tags: latest
